# sampleSTM32f407VGT6Blinky

./: Cargo.toml  Embed.toml  README.md  build.rs  memory.x  stm32f407.svd
.cargo/: config.toml
src/: main.rs
