[package]
name = "stm32f407vg"
version = "0.1.0"
authors = ["user"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }


[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f407", "defmt", ]


[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
